--- a/index.html
+++ b/index.html
@@ -59,8 +59,6 @@
 				v1 = new H5sPlayerWS(conf1);
 				v1.connect();
 			}
-			
-		
    		});
    		
 	
@@ -70,7 +68,7 @@
 <div class="row">
 <iframe id="h5siframe1" marginWidth=0 marginHeight=0 frameborder="no" border="0"  width="100%" height="240px"></iframe>
 </div>
-<div class="row"> 
+<div class="row h5videowrapper"> 
     <video class="h5video1" id="h5sVideo1"   poster="null"   webkit-playsinline playsinline>
     </video>
 </div>
